--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -13,8 +13,8 @@
             <h2>メニュー</h2>
             <p>今日のタスク</p>
             <p>明日以降のタスク</p>
-            <p>Privateなタスク</p>
-            <p>Businessなタスク</p>
+            <p>プライベートのタスク</p>
+            <p>仕事のタスク</p>
             <p>終わったタスク</p>
         </div>
         <div class="task_container">
