--- a/app/views/lists/new.html.erb
+++ b/app/views/lists/new.html.erb
@@ -8,21 +8,21 @@
         </div>
     </head>
     <body>
-        <%= form_for :task, url: lists_path do |f| %>
-        <p>
+        <%= form_with model: @task, url: lists_path do |f| %>
+        <p>タイトル：
             <%= f.text_field :title, placeholder: 'タイトル' %>
         </P>
-        <p>
+        <p>内容：
             <%= f.text_area :body, placeholder: '内容' %>
         </P>
-        <p>
-            <%= f.datetime_local_field :deadline, placeholder: '期限（日付）' %>
+        <p>期限（日時）
+            <%= f.datetime_local_field :deadline, placeholder: '期限（日時）' %>
         </P>
-        <p>
-            <%= f.number_field :priority, placeholder: '優先度' %>
-        </P>
-        <p>
-            <%= f.text_field :category, placeholder: 'カテゴリー' %>
+        <p>優先度：
+            <%= f.select :priority_id, [['なる早', 1], ['やや早', 2], ['備忘', 3]]%>
+        </p>
+        <p>カテゴリー：
+            <%= f.select :category, [['仕事', 'business'], ['プライベート', 'privates']] %>
         </P>
         <p>
             <%= f.submit %>
