--- a/app/views/lists_tomorrow/index.html.erb
+++ b/app/views/lists_tomorrow/index.html.erb
@@ -8,7 +8,7 @@
         </div>
     </head>
     <body>
-        <h2 class="today">仕事のタスク</h2>
+        <h2 class="today">これからのタスク</h2>
         <div class="menu_container"
             <h2>メニュー</h2>
             <p><%= link_to '今日のタスク', lists_today_path %></p>
@@ -22,13 +22,13 @@
             <%= link_to "タスクの追加", new_list_path, class: "add_task" %>
             </h2>
             <ul>
-            <% @tasks.where(category: 1, complete: 0).find_each do |task| %>
+            <% @tasks.where(deadline: Time.now.end_of_day..(Time.now.end_of_day + 12.months), complete: 0).find_each do |task| %>
             <li>
-              <%= link_to task.complete, list_path(task.id) %>
-              <%= link_to task.title, list_path(task.id) %>
-              <%= link_to task.category, list_path(task.id) %>
-              <%= link_to task.priority.name, list_path(task.id) %>
-              <%= link_to '削除', list_path(task.id), method: :delete, data: { confirm: '本当に削除してもよろしいですか？' } %>
+            <%= link_to task.complete, list_path(task.id) %>
+            <%= link_to task.title, list_path(task.id) %>
+            <%= link_to task.category, list_path(task.id) %>
+            <%= link_to task.priority.name, list_path(task.id) %>
+            <%= link_to '削除', list_path(task.id), method: :delete, data: { confirm: '本当に削除してもよろしいですか？' } %>
             </li>
             <% end %>
             </ul>
