--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,7 +4,7 @@
         <div class="header">
             <h2><%= link_to 'ホーム', root_path %></h2>
             <h2><%= link_to 'アカウント', new_account_session_path %></h2>
-            <h2><%= link_to 'ログアウト', destroy_account_session_path %></h2>
+            <h2><%= link_to 'ログアウト', destroy_account_session_path, method: :delete %></h2>
         </div>
     </head>
     <body>
