completeカラム修正

--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -13,7 +13,7 @@
         <p><%= @task.deadline %></P>
         <p><%= @task.priority.name %></P>
         <p><%= @task.category %></P>
-        <p><%= @task.complete %></P>
+        <p><%= @task.status %></P>
         <div class='task_edit'>
             <p><%= link_to '編集', edit_list_path(@task) %></P>
         </div>
